Update navbar spacing and page content

--- a/aboutus.html
+++ b/aboutus.html
@@ -45,11 +45,11 @@
 
   <!-- Nav buttons -->
   <nav class="nav-buttons" id="navButtons">
-    <a href="index.html" ><button>HOME</button></a>
-    <a href="aboutus.html" class="active"><button>ABOUT US</button></a>
-    <a href="howitworks.html"><button>HOW IT WORKS</button></a>
-    <a href="faq.html"><button>FAQ</button></a>
-    <a href="contactus.html"><button>CONTACT US</button></a>
+    <a href="index.html" ><button><span>HOME</span></button></a>
+    <a href="aboutus.html" class="active"><button><span>ABOUT US</span></button></a>
+    <a href="howitworks.html"><button><span>HOW IT WORKS</span></button></a>
+    <a href="faq.html"><button><span>FAQ</span></button></a>
+    <a href="contactus.html"><button><span>CONTACT US</span></button></a>
   </nav>
 
   <!-- Right side: search button + burger menu -->
@@ -171,11 +171,10 @@
 
 <!-- Leadership Section Header -->
 <div class="section-header">
-  <h4 class="section-subtitle">Leadership Team</h4>
+  <h4 class="section-subtitle">Global Support Team</h4>
   <h2 class="section-title">Our Vision</h2>
   <p class="section-description">
-    Empowering businesses with effective admin and virtual support to help industries grow and succeed.
-  </p>
+Connecting businesses globally through a growing community of exceptionally qualified virtual assistants, empowering growth and innovation across industries and continents.  </p>
 </div>
 
 
