--- a/contactus.html
+++ b/contactus.html
@@ -36,14 +36,13 @@
       <img src="image/datafillogo.png" alt="DataFil Logo" />
     </a>
   </div>
-
   <!-- Nav buttons -->
   <nav class="nav-buttons" id="navButtons">
-    <a href="index.html" ><button>HOME</button></a>
-    <a href="aboutus.html" ><button>ABOUT US</button></a>
-    <a href="howitworks.html"><button>HOW IT WORKS</button></a>
-    <a href="faq.html"><button>FAQ</button></a>
-    <a href="contactus.html" class="active"><button>CONTACT US</button></a>
+    <a href="index.html" ><button><span>HOME</span></button></a>
+    <a href="aboutus.html"><button><span>ABOUT US</span></button></a>
+    <a href="howitworks.html"><button><span>HOW IT WORKS</span></button></a>
+    <a href="faq.html"><button><span>FAQ</span></button></a>
+    <a href="contactus.html" class="active"><button><span>CONTACT US</span></button></a>
   </nav>
 
   <!-- Right side: search button + burger menu -->
