--- a/howitworks.html
+++ b/howitworks.html
@@ -44,13 +44,12 @@
 
   <!-- Nav buttons -->
   <nav class="nav-buttons" id="navButtons">
-    <a href="index.html"><button>HOME</button></a>
-    <a href="aboutus.html"><button>ABOUT US</button></a>
-    <a href="howitworks.html"  class="active"><button>HOW IT WORKS</button></a>
-    <a href="faq.html"><button>FAQ</button></a>
-    <a href="contactus.html"><button>CONTACT US</button></a>
+    <a href="index.html"><button><span>HOME</span></button></a>
+    <a href="aboutus.html"><button><span>ABOUT US</span></button></a>
+    <a href="howitworks.html"  class="active"><button><span>HOW IT WORKS</span></button></a>
+    <a href="faq.html"><button><span>FAQ</span></button></a>
+    <a href="contactus.html"><button><span>CONTACT US</span></button></a>
   </nav>
-
   <!-- Right side: search button + burger menu -->
   <div class="navbar-right">
     <button id="searchIcon" class="search-icon">
