--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
   <!-- Nav buttons -->
   <nav class="nav-buttons" id="navButtons">
-    <a href="index.html" class="active"><button>HOME</button></a>
-    <a href="aboutus.html"><button>ABOUT US</button></a>
-    <a href="howitworks.html"><button>HOW IT WORKS</button></a>
-    <a href="faq.html"><button>FAQ</button></a>
-    <a href="contactus.html"><button>CONTACT US</button></a>
+    <a href="index.html" class="active"><button><span>HOME</span></button></a>
+    <a href="aboutus.html"><button><span>ABOUT US</span></button></a>
+    <a href="howitworks.html"><button><span>HOW IT WORKS</span></button></a>
+    <a href="faq.html"><button><span>FAQ</span></button></a>
+    <a href="contactus.html"><button><span>CONTACT US</span></button></a>
   </nav>
 
   <!-- Right side: search button + burger menu -->
